--- a/public/17-news.html
+++ b/public/17-news.html
@@ -59,7 +59,7 @@
 										<div class="top-nav__row-mobile row">
 											<div class="col-lg-auto">
 												<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Услуги</a></li>
+													<li class="menu-item" itemprop="item"><a class="active" href="#" itemprop="url">Услуги</a></li>
 													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a></li>
 													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">О компании</a></li>
 													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Новости</a></li>
@@ -145,186 +145,186 @@
 				<div class="container-wide">
 					<div class="row">
 						<div class="col-md-6">
-							<a class="news-item" href="#">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-1.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-1.webp"/><img class="object-fit-js" src="img/@2x/sNews-1.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<h3>Дмитрий Пёрышков в&nbsp;жюри премии WOW Awards</h3>
+							<div class="news-item"><a href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sNews-1.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sNews-1.webp"/><img class="object-fit-js" src="img/@2x/sNews-1.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></a>
+								<h3><a href="#">Дмитрий Пёрышков в&nbsp;жюри премии WOW Awards</a></h3>
 								<div class="news-item__date">21&nbsp;января
 								</div>
-							</a>
+							</div>
 						</div>
 						<div class="col-md-6">
-							<a class="news-item" href="#">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-3.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-3.webp"/><img class="object-fit-js" src="img/@2x/sNews-3.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<h3>Фейгин: Интервью для Wordshop</h3>
+							<div class="news-item"><a href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sNews-3.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sNews-3.webp"/><img class="object-fit-js" src="img/@2x/sNews-3.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></a>
+								<h3><a href="#">Фейгин: Интервью для Wordshop</a></h3>
 								<div class="news-item__date">30&nbsp;сентября 2020
 								</div>
-							</a>
+							</div>
 						</div>
 						<div class="col-md-6">
-							<a class="news-item" href="#">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-4.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-4.webp"/><img class="object-fit-js" src="img/@2x/sNews-4.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<h3>Проект студенческой команды НИУ ВШЭ под менторством Дмитрия Пёрышкова одержал победу</h3>
+							<div class="news-item"><a href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sNews-4.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sNews-4.webp"/><img class="object-fit-js" src="img/@2x/sNews-4.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></a>
+								<h3><a href="#">Проект студенческой команды НИУ ВШЭ под менторством Дмитрия Пёрышкова одержал победу</a></h3>
 								<div class="news-item__date">21&nbsp;января
 								</div>
-							</a>
+							</div>
 						</div>
 						<div class="col-md-6">
-							<a class="news-item" href="#">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-5.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-5.webp"/><img class="object-fit-js" src="img/@2x/sNews-5.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<h3>Компания DDVB вошла в&nbsp;ТОП-5 рейтинга по&nbsp;маркетинговому консалтингу</h3>
+							<div class="news-item"><a href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sNews-5.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sNews-5.webp"/><img class="object-fit-js" src="img/@2x/sNews-5.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></a>
+								<h3><a href="#">Компания DDVB вошла в&nbsp;ТОП-5 рейтинга по&nbsp;маркетинговому консалтингу</a></h3>
 								<div class="news-item__date">21&nbsp;января
 								</div>
-							</a>
+							</div>
 						</div>
 						<div class="col-md-6">
-							<a class="news-item" href="#">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-6.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-6.webp"/><img class="object-fit-js" src="img/@2x/sNews-6.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<h3>Время побеждать: сразу три наших работы получили серебро на&nbsp;&laquo;Серебряном Меркурии&raquo;</h3>
+							<div class="news-item"><a href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sNews-6.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sNews-6.webp"/><img class="object-fit-js" src="img/@2x/sNews-6.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></a>
+								<h3><a href="#">Время побеждать: сразу три наших работы получили серебро на&nbsp;&laquo;Серебряном Меркурии&raquo;</a></h3>
 								<div class="news-item__date">21&nbsp;января
 								</div>
-							</a>
+							</div>
 						</div>
 						<div class="col-md-6">
-							<a class="news-item" href="#">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-7.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-7.webp"/><img class="object-fit-js" src="img/@2x/sNews-7.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<h3>Дмитрий Пёрышков выступил на&nbsp;Russian Creativity Week</h3>
+							<div class="news-item"><a href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sNews-7.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sNews-7.webp"/><img class="object-fit-js" src="img/@2x/sNews-7.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></a>
+								<h3><a href="#">Дмитрий Пёрышков выступил на&nbsp;Russian Creativity Week</a></h3>
 								<div class="news-item__date">21 января
 								</div>
-							</a>
+							</div>
 						</div>
 						<div class="col-md-6">
-							<a class="news-item" href="#">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-8.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-8.webp"/><img class="object-fit-js" src="img/@2x/sNews-8.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<h3>Проект студенческой команды НИУ ВШЭ под менторством Дмитрия Пёрышкова одержал победу</h3>
+							<div class="news-item"><a href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sNews-8.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sNews-8.webp"/><img class="object-fit-js" src="img/@2x/sNews-8.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></a>
+								<h3><a href="#">Проект студенческой команды НИУ ВШЭ под менторством Дмитрия Пёрышкова одержал победу</a></h3>
 								<div class="news-item__date">21&nbsp;января
 								</div>
-							</a>
+							</div>
 						</div>
 						<div class="col-md-6">
-							<a class="news-item" href="#">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-9.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-9.webp"/><img class="object-fit-js" src="img/@2x/sNews-9.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<h3>Компания DDVB вошла в&nbsp;ТОП-5 рейтинга по&nbsp;маркетинговому консалтингу</h3>
+							<div class="news-item"><a href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sNews-9.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sNews-9.webp"/><img class="object-fit-js" src="img/@2x/sNews-9.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></a>
+								<h3><a href="#">Компания DDVB вошла в&nbsp;ТОП-5 рейтинга по&nbsp;маркетинговому консалтингу</a></h3>
 								<div class="news-item__date">21&nbsp;января
 								</div>
-							</a>
+							</div>
 						</div>
 						<div class="col-md-6">
-							<a class="news-item" href="#">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-10.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-10.webp"/><img class="object-fit-js" src="img/@2x/sNews-10.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<h3>Создание легенды брендаСоздание легенды бренда</h3>
+							<div class="news-item"><a href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sNews-10.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sNews-10.webp"/><img class="object-fit-js" src="img/@2x/sNews-10.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></a>
+								<h3><a href="#">Создание легенды брендаСоздание легенды бренда</a></h3>
 								<div class="news-item__date">21&nbsp;января
 								</div>
-							</a>
+							</div>
 						</div>
 						<div class="col-md-6">
-							<a class="news-item" href="#">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-11.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-11.webp"/><img class="object-fit-js" src="img/@2x/sNews-11.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<h3>Фейгин: Интервью для Wordshop</h3>
+							<div class="news-item"><a href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sNews-11.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sNews-11.webp"/><img class="object-fit-js" src="img/@2x/sNews-11.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></a>
+								<h3><a href="#">Фейгин: Интервью для Wordshop</a></h3>
 								<div class="news-item__date">30&nbsp;сентября 2020
 								</div>
-							</a>
+							</div>
 						</div>
 						<div class="col-md-6">
-							<a class="news-item" href="#">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-12.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-12.webp"/><img class="object-fit-js" src="img/@2x/sNews-12.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<h3>Проект студенческой команды НИУ ВШЭ под менторством Дмитрия Пёрышкова одержал победу</h3>
+							<div class="news-item"><a href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sNews-12.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sNews-12.webp"/><img class="object-fit-js" src="img/@2x/sNews-12.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></a>
+								<h3><a href="#">Проект студенческой команды НИУ ВШЭ под менторством Дмитрия Пёрышкова одержал победу</a></h3>
 								<div class="news-item__date">21&nbsp;января
 								</div>
-							</a>
+							</div>
 						</div>
 						<div class="col-md-6">
-							<a class="news-item" href="#">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-5.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-5.webp"/><img class="object-fit-js" src="img/@2x/sNews-5.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<h3>Компания DDVB вошла в&nbsp;ТОП-5 рейтинга по&nbsp;маркетинговому консалтингу</h3>
+							<div class="news-item"><a href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sNews-5.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sNews-5.webp"/><img class="object-fit-js" src="img/@2x/sNews-5.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></a>
+								<h3><a href="#">Компания DDVB вошла в&nbsp;ТОП-5 рейтинга по&nbsp;маркетинговому консалтингу</a></h3>
 								<div class="news-item__date">21&nbsp;января
 								</div>
-							</a>
+							</div>
 						</div>
 						<div class="col-md-6">
-							<a class="news-item" href="#">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-1.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-1.webp"/><img class="object-fit-js" src="img/@2x/sNews-1.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<h3>Дмитрий Пёрышков в&nbsp;жюри премии WOW Awards</h3>
+							<div class="news-item"><a href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sNews-1.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sNews-1.webp"/><img class="object-fit-js" src="img/@2x/sNews-1.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></a>
+								<h3><a href="#">Дмитрий Пёрышков в&nbsp;жюри премии WOW Awards</a></h3>
 								<div class="news-item__date">21&nbsp;января
 								</div>
-							</a>
+							</div>
 						</div>
 						<div class="col-md-6">
-							<a class="news-item" href="#">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-7.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-7.webp"/><img class="object-fit-js" src="img/@2x/sNews-7.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<h3>Дмитрий Пёрышков выступил на&nbsp;Russian Creativity Week</h3>
+							<div class="news-item"><a href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sNews-7.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sNews-7.webp"/><img class="object-fit-js" src="img/@2x/sNews-7.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></a>
+								<h3><a href="#">Дмитрий Пёрышков выступил на&nbsp;Russian Creativity Week</a></h3>
 								<div class="news-item__date">12&nbsp;сентября 2020
 								</div>
-							</a>
+							</div>
 						</div>
 						<div class="spinner">
 						</div>
