--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 										<div class="top-nav__row-mobile row">
 											<div class="col-lg-auto">
 												<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Услуги</a></li>
+													<li class="menu-item" itemprop="item"><a class="active" href="#" itemprop="url">Услуги</a></li>
 													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a></li>
 													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">О компании</a></li>
 													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Новости</a></li>
@@ -145,7 +145,7 @@
 								<source type="image/webp" srcset="img/@2x/webp/slide-lg.webp" media="(min-width:576px)"/>
 								<source type="image/webp" srcset="img/@2x/webp/slide-sm.webp"/>
 								<source type="image/jpg" srcset="img/@2x/avif/slide-lg.jpg" media="(min-width:576px)"/>
-								<source type="image/jpg" srcset="img/@2x/avif/slide-sm.jpg"/><img class="object-fit-js" src="img/@2x/slide-lg.jpg" alt="" loading="lazy"/>
+								<source type="image/jpg" srcset="img/@2x/avif/slide-sm.jpg"/><img class="object-fit-js" src="img/@2x/slide-lg.jpg" alt=""/>
 							</picture>
 						</div>
 						<div class="main-slider__inner">
@@ -165,7 +165,7 @@
 								<source type="image/webp" srcset="img/@2x/webp/slide-lg.webp" media="(min-width:576px)"/>
 								<source type="image/webp" srcset="img/@2x/webp/slide-sm.webp"/>
 								<source type="image/jpg" srcset="img/@2x/avif/slide-lg.jpg" media="(min-width:576px)"/>
-								<source type="image/jpg" srcset="img/@2x/avif/slide-sm.jpg"/><img class="object-fit-js" src="img/@2x/slide-lg.jpg" alt="" loading="lazy"/>
+								<source type="image/jpg" srcset="img/@2x/avif/slide-sm.jpg"/><img class="object-fit-js" src="img/@2x/slide-lg.jpg" alt=""/>
 							</picture>
 						</div>
 						<div class="main-slider__inner">
@@ -185,7 +185,7 @@
 								<source type="image/webp" srcset="img/@2x/webp/slide-lg.webp" media="(min-width:576px)"/>
 								<source type="image/webp" srcset="img/@2x/webp/slide-sm.webp"/>
 								<source type="image/jpg" srcset="img/@2x/avif/slide-lg.jpg" media="(min-width:576px)"/>
-								<source type="image/jpg" srcset="img/@2x/avif/slide-sm.jpg"/><img class="object-fit-js" src="img/@2x/slide-lg.jpg" alt="" loading="lazy"/>
+								<source type="image/jpg" srcset="img/@2x/avif/slide-sm.jpg"/><img class="object-fit-js" src="img/@2x/slide-lg.jpg" alt=""/>
 							</picture>
 						</div>
 						<div class="main-slider__inner">
@@ -349,30 +349,30 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6">
-							<a class="news-item" href="#">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-1.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-1.webp"/><img class="object-fit-js" src="img/@2x/sNews-1.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<h3>Дмитрий Пёрышков в&nbsp;жюри премии WOW Awards</h3>
+							<div class="news-item"><a href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sNews-1.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sNews-1.webp"/><img class="object-fit-js" src="img/@2x/sNews-1.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></a>
+								<h3><a href="#">Дмитрий Пёрышков в&nbsp;жюри премии WOW Awards</a></h3>
 								<div class="news-item__date">21 января
 								</div>
-							</a>
+							</div>
 						</div>
 						<div class="col-md-6">
-							<a class="news-item" href="#">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-2.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-2.webp"/><img class="object-fit-js" src="img/@2x/sNews-2.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<h3>Леонид Фейгин о&nbsp;новом логотипе ZARA</h3>
+							<div class="news-item"><a href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sNews-2.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sNews-2.webp"/><img class="object-fit-js" src="img/@2x/sNews-2.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></a>
+								<h3><a href="#">Леонид Фейгин о&nbsp;новом логотипе ZARA</a></h3>
 								<div class="news-item__date">21 января
 								</div>
-							</a>
+							</div>
 						</div>
 					</div><a class="btn-more" href="#">
 						<svg class="icon icon-chevron-right-btn ">
