--- a/public/11-1-team.html
+++ b/public/11-1-team.html
@@ -59,7 +59,7 @@
 										<div class="top-nav__row-mobile row">
 											<div class="col-lg-auto">
 												<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Услуги</a></li>
+													<li class="menu-item" itemprop="item"><a class="active" href="#" itemprop="url">Услуги</a></li>
 													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a></li>
 													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">О компании</a></li>
 													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Новости</a></li>
