--- a/public/10-1-vision.html
+++ b/public/10-1-vision.html
@@ -28,17 +28,18 @@
 		<link href="libs/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="libs/animate.css/animate.min.css" rel="stylesheet"/>
+		<link href="libs/filepond/filepond.min.css" rel="stylesheet"/>
+		<link href="libs/filepond-plugin-image-preview/filepond-plugin-image-preview.min.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
 	<body>
 		<div class="main-wrapper">
 			<!-- start top-nav-->
 			<div class="top-nav block-with-lazy">
-				<div class="container-wide">
-					<div class="container-fluid">
-						<div class="top-nav__row row">
-							<div class="col-auto">
-								<a class="logo-link" href="/"><svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<div class="container-wide"> 
+					<div class="top-nav__row row">
+						<div class="col-auto">
+							<a class="logo-link" href="/"><svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g clip-path="url(#clip0_2312_2263)">
 <rect width="48" height="48" fill="#FFD747"/>
 <path d="M43.0703 2.33496H5.05953C3.50277 2.33496 2.33521 3.50253 2.33521 5.05929V43.0701C2.33521 44.6269 3.50277 45.7944 5.05953 45.7944H43.0703C44.6271 45.7944 45.7947 44.6269 45.7947 43.0701V5.05929C45.7947 3.50253 44.4974 2.33496 43.0703 2.33496Z" fill="#FFD747"/>
@@ -51,84 +52,83 @@
 </clipPath>
 </defs>
 </svg>
-								</a>
-							</div>
-							<div class="col">
-								<div class="menu-mobile menu-mobile--js">
-									<div class="menu-mobile__inner">
-										<div class="top-nav__row-mobile row">
-											<div class="col-lg-auto">
-												<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-													<li class="menu-item" itemprop="item"><a class="active" href="#" itemprop="url">Услуги</a></li>
-													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a></li>
-													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">О компании</a></li>
-													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Новости</a></li>
-													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a></li>
-												</ul>
-											</div>
-											<div class="col-lg order-lg-0 order-last">
-												<div class="search-block">
-													<div class="search-block__btn search-block__btn--show search-block__btn--js d-none d-lg-block">
-														<svg class="icon icon-search2 ">
-															<use xlink:href="img/svg/sprite.svg#search2"></use>
-														</svg>
-													</div>
-													<div class="search-block__hidden-block">
-														<form>
-															<div class="search-block__input-wrap form-group"><input class="search-block__input form-control" name="text" type="text" placeholder="Поиск"/>
-															</div>
-															<!-- +e.input-wrap-->
-															<button class="search-block__btn d-lg-none" type="submit">
-																<svg class="icon icon-search2 ">
-																	<use xlink:href="img/svg/sprite.svg#search2"></use>
-																</svg>
-															</button>
-														</form>
-														<div class="search-block__btn search-block__btn--close search-block__btn--js d-none d-lg-block">
-															<svg class="icon icon-close ">
-																<use xlink:href="img/svg/sprite.svg#close"></use>
-															</svg>
+							</a>
+						</div>
+						<div class="col">
+							<div class="menu-mobile menu-mobile--js">
+								<div class="menu-mobile__inner">
+									<div class="top-nav__row-mobile row">
+										<div class="col-lg-auto">
+											<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
+												<li class="menu-item" itemprop="item"><a class="active" href="#" itemprop="url">Услуги</a></li>
+												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a></li>
+												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">О компании</a></li>
+												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Новости</a></li>
+												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a></li>
+											</ul>
+										</div>
+										<div class="col-lg order-lg-0 order-last">
+											<div class="search-block">
+												<div class="search-block__btn search-block__btn--show search-block__btn--js d-none d-lg-block">
+													<svg class="icon icon-search2 ">
+														<use xlink:href="img/svg/sprite.svg#search2"></use>
+													</svg>
+												</div>
+												<div class="search-block__hidden-block">
+													<form>
+														<div class="search-block__input-wrap form-group"><input class="search-block__input form-control" name="text" type="text" placeholder="Поиск"/>
 														</div>
+														<!-- +e.input-wrap-->
+														<button class="search-block__btn d-lg-none" type="submit">
+															<svg class="icon icon-search2 ">
+																<use xlink:href="img/svg/sprite.svg#search2"></use>
+															</svg>
+														</button>
+													</form>
+													<div class="search-block__btn search-block__btn--close search-block__btn--js d-none d-lg-block">
+														<svg class="icon icon-close ">
+															<use xlink:href="img/svg/sprite.svg#close"></use>
+														</svg>
 													</div>
 												</div>
 											</div>
-											<div class="top-nav__col-mail col-lg-auto"><a href="mailto:info@ddvb.ru">info@ddvb.ru </a>
-											</div>
-											<div class="col-lg-auto order-lg-last">
-												<a class="top-nav__btn" href="#" data-src="#submit-request" data-fancybox="modal">Оставить заявку
+										</div>
+										<div class="top-nav__col-mail col-lg-auto"><a href="mailto:info@ddvb.ru">info@ddvb.ru </a>
+										</div>
+										<div class="col-lg-auto order-lg-last">
+											<a class="top-nav__btn" href="#" data-src="#submit-request" data-fancybox="modal">Оставить заявку
+											</a>
+										</div>
+										<div class="col-lg-auto">
+											<div class="soc">
+												<a class="soc__item" href="#" target="_blank">
+													<svg class="icon icon-youtube ">
+														<use xlink:href="img/svg/sprite.svg#youtube"></use>
+													</svg>
 												</a>
-											</div>
-											<div class="col-lg-auto">
-												<div class="soc">
-													<a class="soc__item" href="#" target="_blank">
-														<svg class="icon icon-youtube ">
-															<use xlink:href="img/svg/sprite.svg#youtube"></use>
-														</svg>
-													</a>
-													<a class="soc__item" href="#" target="_blank">
-														<svg class="icon icon-instagram2 ">
-															<use xlink:href="img/svg/sprite.svg#instagram2"></use>
-														</svg>
-													</a>
-													<a class="soc__item" href="#" target="_blank">
-														<svg class="icon icon-facebook ">
-															<use xlink:href="img/svg/sprite.svg#facebook"></use>
-														</svg>
-													</a>
-													<a class="soc__item" href="#" target="_blank">
-														<svg class="icon icon-behance ">
-															<use xlink:href="img/svg/sprite.svg#behance"></use>
-														</svg>
-													</a>
-												</div>
+												<a class="soc__item" href="#" target="_blank">
+													<svg class="icon icon-instagram2 ">
+														<use xlink:href="img/svg/sprite.svg#instagram2"></use>
+													</svg>
+												</a>
+												<a class="soc__item" href="#" target="_blank">
+													<svg class="icon icon-facebook ">
+														<use xlink:href="img/svg/sprite.svg#facebook"></use>
+													</svg>
+												</a>
+												<a class="soc__item" href="#" target="_blank">
+													<svg class="icon icon-behance ">
+														<use xlink:href="img/svg/sprite.svg#behance"></use>
+													</svg>
+												</a>
 											</div>
 										</div>
 									</div>
 								</div>
 							</div>
-							<div class="col-auto d-lg-none">
-								<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
-								</div>
+						</div>
+						<div class="col-auto d-lg-none">
+							<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
 							</div>
 						</div>
 					</div>
@@ -367,7 +367,7 @@
 						<div class="form-wrap__input-wrap form-group">
 							<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/><span class="custom-input__text form-check-label">Тендер</span>
 							</label>
-						</div>
+						</div><input type="file"  class="filepond" name="filepond"  multiple  data-allow-reorder="true" data-max-file-size="3MB" data-max-files="3">
 						<button class="form-wrap__btn btn" type="submit">Оставить заявку
 						</button>
 						<div class="form-wrap__policy"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
@@ -383,6 +383,11 @@
 		<script src="libs/swiper/swiper-bundle.min.js"></script>
 		<script src="libs/inputmask/inputmask.min.js"> </script>
 		<script src="libs/wowjs/wow.min.js"></script>
+		<script src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.min.js"> </script>
+		<script src="https://unpkg.com/filepond-plugin-file-validate-size/dist/filepond-plugin-file-validate-size.min.js"> </script>
+		<script src="https://unpkg.com/filepond-plugin-image-exif-orientation/dist/filepond-plugin-image-exif-orientation.min.js"> </script>
+		<script src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.js"> </script>
+		<script src="https://unpkg.com/filepond/dist/filepond.min.js"> </script>
 		<script src="js/common.js"></script>
 	</body>
 </html>
