--- a/public/09-about-company-5.html
+++ b/public/09-about-company-5.html
@@ -156,37 +156,39 @@
 			<div class="sHistory section" id="sHistory">
 				<div class="container-wide">
 					<div class="head-wrapper">
-						<div class="row"> 
-							<div class="head-wrapper__col col-lg-6">
-								<h2>Придаём брендам человеческое лицо,</h2>
-								<p>помогая им&nbsp;адаптироваться и&nbsp;процветать в&nbsp;мире множества взаимосвязей</p>
-							</div>
-							<div class="col-lg-6">
-								<div class="head-wrapper__slider head-wrapper__slider--js swiper">
-									<div class="swiper-wrapper">
-										<div class="head-wrapper__slide swiper-slide">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
-										</div>
-										<div class="head-wrapper__slide swiper-slide" style="true">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
-										</div>
-										<div class="head-wrapper__slide swiper-slide">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
+						<div class="container">
+							<div class="row"> 
+								<div class="head-wrapper__col col-lg-6">
+									<h2>Придаём брендам человеческое лицо,</h2>
+									<p>помогая им&nbsp;адаптироваться и&nbsp;процветать в&nbsp;мире множества взаимосвязей</p>
+								</div>
+								<div class="col-lg-6">
+									<div class="head-wrapper__slider head-wrapper__slider--js swiper">
+										<div class="swiper-wrapper">
+											<div class="head-wrapper__slide swiper-slide">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div>
+											<div class="head-wrapper__slide swiper-slide" style="true">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div>
+											<div class="head-wrapper__slide swiper-slide">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div>
 										</div>
 									</div>
 								</div>
